add news_post controller and model

--- a/mainapp/templates/mainapp/includes/news_horizontal.html
+++ b/mainapp/templates/mainapp/includes/news_horizontal.html
@@ -1,6 +1,6 @@
 <div class="col-xl-3">
     <div class="block__news">
-        <a href="{% url 'detailview' 'post' post.pk %}" class="link__news">
+        <a href="{% url 'detailview' 'news_post' post.pk %}#page-top" class="link__news">
             <div class="box__news">
                 <p class="data__news__main">{{ post.published_date }}</p>
                 <p class="box__news__text">
